--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ license-file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glium = "0.29.0"
+image = "0.23.14"
+log = "0.4.14"
+log4rs = "1.0.0"
+rhai = "0.19.15"
 
 [profile.release]
 opt-level = "z"
