--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,28 @@ license-file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glium = "0.29.0"
+env_logger = "0.8.3"
+#gfx = "0.18.2"
+#gfx-backend-dx12 = { version = "0.7.0", optional = true }
+#gfx-backend-empty = { version = "0.7.0", optional = true }
+#gfx-backend-metal = { version = "0.7.0", optional = true }
+#gfx-backend-vulkan = { version = "0.7.0", optional = true }
 image = "0.23.14"
 log = "0.4.14"
-log4rs = "1.0.0"
+#log4rs = "1.0.0"
+pollster = "0.2.2"
 rhai = "0.19.15"
+wgpu = "0.7.1"
+winit = "0.24.0"
+#shaderc = "0.7.2"
+
+#[features]
+#default = ["vulkan"]
+#metal = ["gfx-backend-metal"]
+#gl = ["gfx-backend-gl"]
+#vulkan = ["gfx-backend-vulkan"]
+#dx11 = ["gfx-backend-dx11"]
+#dx12 = ["gfx-backend-dx12"]
 
 [profile.release]
 opt-level = "z"
