--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,22 +14,12 @@ license-file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#env_logger = "0.8.3"
-#gfx = "0.18.2"
-#gfx-backend-dx12 = { version = "0.7.0", optional = true }
-#gfx-backend-empty = { version = "0.7.0", optional = true }
-#gfx-backend-metal = { version = "0.7.0", optional = true }
-#gfx-backend-vulkan = { version = "0.7.0", optional = true }
-#image = "0.23.14"
+image = "0.23.14"
 log = "0.4.14"
 log4rs = "1.0.0"
-#pollster = "0.2.2"
 rhai = "0.19.15"
 vulkano = "0.22.0"
 game-loop = "0.7.3"
-#wgpu = "0.7.1"
-#winit = "0.24.0"
-#shaderc = "0.7.2"
 
 [dependencies.sdl2]
 version = "0.34.4"
@@ -48,14 +38,6 @@ x86_64-apple-darwin = { triplet = "x64-osx" }
 aarch64-pc-windows-msvc = { triplet = "arm64-windows-static-md" }
 aarch64-unknown-linux-gnu = { triplet = "arm64-linux" }
 aarch64-apple-darwin = { triplet = "arm64-osx" }
-
-#[features]
-#default = ["vulkan"]
-#metal = ["gfx-backend-metal"]
-#gl = ["gfx-backend-gl"]
-#vulkan = ["gfx-backend-vulkan"]
-#dx11 = ["gfx-backend-dx11"]
-#dx12 = ["gfx-backend-dx12"]
 
 [profile.release]
 opt-level = "z"
