Renderer handles color differently, program support start

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rhai = "0.19.15"
 vulkano = "0.22.0"
 game-loop = "0.7.3"
 lazy_static = "1.4.0"
+rand = "0.8.3"
 
 [dependencies.sdl2]
 version = "0.34.4"
