--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,6 @@ aarch64-unknown-linux-gnu = { triplet = "arm64-linux" }
 aarch64-apple-darwin = { triplet = "arm64-osx" }
 
 [profile.release]
-opt-level = "z"
+opt-level = 3
 lto = true
 codegen-units = 1
