Removed sdl2 and started on macroquad

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,28 +18,10 @@ image = "0.23.14"
 log = "0.4.14"
 log4rs = "1.0.0"
 rhai = "0.19.15"
-vulkano = "0.22.0"
 game-loop = "0.7.3"
 lazy_static = "1.4.0"
 rand = "0.8.3"
-
-[dependencies.sdl2]
-version = "0.34.4"
-default-features = false
-features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]
-
-[package.metadata.vcpkg]
-dependencies = ["sdl2[vulkan]", "sdl2-image[libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
-git = "https://github.com/microsoft/vcpkg"
-rev = "030cfaa24de9ea1bbf0a4d9c615ce7312ba77af1"
-
-[package.metadata.vcpkg.target]
-x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
-x86_64-unknown-linux-gnu = { triplet = "x64-linux" }
-x86_64-apple-darwin = { triplet = "x64-osx" }
-aarch64-pc-windows-msvc = { triplet = "arm64-windows-static-md" }
-aarch64-unknown-linux-gnu = { triplet = "arm64-linux" }
-aarch64-apple-darwin = { triplet = "arm64-osx" }
+macroquad = "0.3.0-alpha.17"
 
 [profile.release]
 opt-level = 3
