--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,11 @@ log4rs = "1.0.0"
 rhai = "0.19.15"
 game-loop = "0.7.3"
 lazy_static = "1.4.0"
+wgpu = "0.7.1"
+winit = "0.24.0"
+shaderc = "0.7.2"
+cgmath = "0.18.0"
+futures = "0.3.13"
 
 [profile.release]
 opt-level = 3
