--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,15 @@ game-loop = "0.7.3"
 lazy_static = "1.4.0"
 wgpu = "0.7.1"
 winit = "0.24.0"
-shaderc = "0.7.2"
 cgmath = "0.18.0"
 futures = "0.3.13"
+bytemuck = { version = "1.4", features = [ "derive" ] }
+
+[build-dependencies]
+anyhow = "1.0.40"
+fs_extra = "1.2.0"
+glob = "0.3.0"
+shaderc = "0.7.2"
 
 [profile.release]
 opt-level = 3
