--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ winit = "0.24.0"
 cgmath = "0.18.0"
 futures = "0.3.13"
 bytemuck = { version = "1.4", features = [ "derive" ] }
+anyhow = "1.0.40"
 
 [build-dependencies]
 anyhow = "1.0.40"
