--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,20 +17,21 @@ license-file = "LICENSE"
 image = "0.23.14"
 log = "0.4.14"
 log4rs = "1.0.0"
-rhai = "0.19.15"
-game-loop = "0.7.3"
-lazy_static = "1.4.0"
+#rhai = "0.19.15"
+#game-loop = "0.7.3"
+#lazy_static = "1.4.0"
 wgpu = "0.7.1"
 winit = "0.24.0"
 cgmath = "0.18.0"
 futures = "0.3.13"
-bytemuck = { version = "1.4", features = [ "derive" ] }
+bytemuck = { version = "1.5.1", features = ["derive"] }
 anyhow = "1.0.40"
 
 [build-dependencies]
 anyhow = "1.0.40"
 fs_extra = "1.2.0"
 glob = "0.3.0"
+rayon = "1.5.0"
 shaderc = "0.7.2"
 
 [profile.release]
