--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ cgmath = "0.18.0"
 futures = "0.3.13"
 bytemuck = { version = "1.5.1", features = ["derive"] }
 anyhow = "1.0.40"
+configparser = "2.0.0"
 
 [build-dependencies]
 anyhow = "1.0.40"
