--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,10 +41,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace --release
       - name: Build
@@ -52,7 +48,7 @@ jobs:
       - name: Zip
         uses: papeloto/action-zip@v1
         with:
-          files: ./target/release/snow-64
+          files: ./target/release/snow64
           dest: snow64-linux.zip
       - name: Upload to release
         uses: alexellis/upload-assets@0.3.0
@@ -77,10 +73,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace --release
       - name: Build
@@ -88,7 +80,7 @@ jobs:
       - name: Zip
         uses: papeloto/action-zip@v1
         with:
-          files: ./target/release/snow-64
+          files: ./target/release/snow64
           dest: snow64-macos.zip
       - name: Upload to release
         uses: alexellis/upload-assets@0.3.0
@@ -102,6 +94,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/cache@v2
         with:
           path: |
@@ -113,10 +106,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace --release
       - name: Build
@@ -124,7 +113,7 @@ jobs:
       - name: Zip
         uses: papeloto/action-zip@v1
         with:
-          files: ./target/release/snow-64.exe
+          files: ./target/release/snow64.exe
           dest: snow64-windows.zip
       - name: Upload to release
         uses: alexellis/upload-assets@0.3.0
