--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,10 +27,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace
       - name: Build
@@ -40,7 +36,7 @@ jobs:
         with:
           name: artifacts-lin
           path: |
-            target/debug/snow-64
+            target/debug/snow64
 
   build-macos:
     runs-on: macos-latest
@@ -57,10 +53,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace
       - name: Build
@@ -70,12 +62,13 @@ jobs:
         with:
           name: artifacts-mac
           path: |
-            target/debug/snow-64
+            target/debug/snow64
 
   build-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/cache@v2
         with:
           path: |
@@ -87,10 +80,6 @@ jobs:
         run: rustup update
       - name: Rust Version
         run: rustc --version
-      - name: Vcpkg
-        run: |
-          cargo install cargo-vcpkg
-          cargo vcpkg build
       - name: Run tests
         run: cargo test --verbose --workspace
       - name: Build
@@ -100,4 +89,4 @@ jobs:
         with:
           name: artifacts-win
           path: |
-            target/debug/snow-64.exe
+            target/debug/snow64.exe
