--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,18 @@ license-file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "0.23.14"
+image = { version = "0.23.14", default-features = false, features = ["png"] }
 log = "0.4.14"
-log4rs = "1.0.0"
+log4rs = { version = "1.0.0", default-features = false, features = ["console_appender", "file_appender"] }
 wgpu = "0.7.1"
 winit = "0.24.0"
 cgmath = "0.18.0"
 futures = "0.3.13"
-bytemuck = { version = "1.5.1", features = ["derive"] } # Can this be removed?
+bytemuck = { version = "1.5.1", features = ["derive"] }
 anyhow = "1.0.40"
 configparser = "2.0.0"
 lazy_static = "1.4.0"
 #rhai = "0.19.15"
-#game-loop = "0.7.3"
 
 [build-dependencies]
 anyhow = "1.0.40"
@@ -37,6 +36,10 @@ rayon = "1.5.0"
 shaderc = "0.7.2"
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 lto = true
+codegen-units = 1
+
+[profile.release.package."*"]
+opt-level = "z"
 codegen-units = 1
