--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "snow64"
 version = "0.0.1"
 authors = ["harmless-tech"]
 edition = "2018"
-description = "An fantasy console."
+description = "A fantasy console."
 documentation = "TODO URL"
 readme = "README.md"
 homepage = "TODO URL"
@@ -25,6 +25,8 @@ bytemuck = { version = "1.5.1", features = ["derive"] }
 anyhow = "1.0.40"
 configparser = "2.0.0"
 lazy_static = "1.4.0"
+seahash = "4.1.0"
+snowbinary = { version = "0.1.0", features = ["v_hash"] }
 #rhai = "0.19.15"
 
 [build-dependencies]
