--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ documentation = "TODO URL"
 readme = "README.md"
 homepage = "TODO URL"
 repository = "https://github.com/harmless-tech/snow64"
-# license = "MIT License - Copyright (c) 2021 harmless-tech"
 license-file = "LICENSE"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,31 +17,31 @@ license-file = "LICENSE"
 image = { version = "0.23.14", default-features = false, features = ["png"] }
 log = "0.4.14"
 log4rs = { version = "1.0.0", default-features = false, features = ["console_appender", "file_appender"] }
-wgpu = "0.7.1" # wgpu 0.8.0 has a problem with glsl shaders.
-winit = "0.24.0"
+wgpu = "0.10.1" # wgpu 0.8.0 has a problem with glsl shaders.
+winit = "0.25.0"
 cgmath = "0.18.0"
-futures = "0.3.13"
-bytemuck = { version = "1.5.1", features = ["derive"] }
-anyhow = "1.0.40"
-configparser = "2.0.0"
+futures = "0.3.17"
+bytemuck = { version = "1.7.2", features = ["derive"] }
+anyhow = "1.0.43"
+configparser = "2.1.0"
 lazy_static = "1.4.0"
 seahash = "4.1.0"
 snowbinary = { version = "0.1.0", features = ["v_hash"] }
-#rhai = "0.19.15"
+#rhai = "1.0.4"
 
 [build-dependencies]
-anyhow = "1.0.40"
+anyhow = "1.0.43"
 fs_extra = "1.2.0"
 glob = "0.3.0"
-oxipng = "4.0.3"
-rayon = "1.5.0"
-shaderc = "0.7.2"
+oxipng = "5.0.0"
+rayon = "1.5.1"
+shaderc = "0.7.3"
 
 [profile.release]
-opt-level = "z"
+opt-level = 3 # "z"
 lto = true
 codegen-units = 1
 
 [profile.release.package."*"]
-opt-level = "z"
+opt-level = 3 # "z"
 codegen-units = 1
