--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,12 @@
 name = "snow64"
 version = "0.0.1"
 authors = ["harmless-tech"]
-edition = "2018"
+edition = "2021"
 description = "A fantasy console."
 readme = "README.md"
 homepage = "TODO URL"
 repository = "https://github.com/harmless-tech/snow64"
 license-file = "LICENSE"
-resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,15 +15,12 @@ resolver = "2"
 image = { version = "0.23.14", default-features = false, features = ["png"] }
 log = "0.4.14"
 log4rs = { version = "1.0.0", default-features = false, features = ["console_appender", "file_appender"] }
-wgpu = "0.10.1"
 winit = "0.25.0"
-cgmath = "0.18.0"
-futures = "0.3.17"
-bytemuck = { version = "1.7.2", features = ["derive"] }
 anyhow = "1.0.43"
 configparser = "2.1.0"
-lazy_static = "1.4.0"
-seahash = "4.1.0"
+#lazy_static = "1.4.0"
+#seahash = "4.1.0"
+#winit_input_helper = "0.11.0"
 #snowbinary = { version = "0.1.0", features = ["v_hash"] } TODO Improve this before I use it.
 #rhai = "1.0.4"
 
@@ -34,7 +30,6 @@ fs_extra = "1.2.0"
 glob = "0.3.0"
 oxipng = "5.0.0"
 rayon = "1.5.1"
-naga = { version = "0.6.3", features = ["glsl-in", "wgsl-out"] }
 
 [profile.release]
 opt-level = 3 # "z"
@@ -42,5 +37,5 @@ lto = true
 codegen-units = 1
 
 [profile.release.package."*"]
-opt-level = 3 # "z"
+opt-level = 3
 codegen-units = 1
