--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = { version = "0.22.2", default-features = false, features = ["png_codec"] }
+image = { version = "0.24.3", default-features = false, features = ["png"] }
 log = "0.4.17"
 log4rs = { version = "1.1.1", default-features = false, features = ["console_appender", "file_appender"] }
 winit = "0.26.1"
@@ -21,10 +21,11 @@ configparser = "3.0.0"
 kira = "0.6.0"
 # kira-cpal = "0.1.0-beta.0"
 pixels = "0.9.0"
+snowbinary = "0.2.0"
+rayon = "1.5.3"
 #lazy_static = "1.4.0" Maybe don't need?
 #seahash = "4.1.0" Maybe don't need?
 #winit_input_helper = "0.11.0" Maybe don't need?
-#snowbinary = { version = "0.1.0", features = ["v_hash"] } Improve this before I use it.
 #rhai = "1.2.1" Maybe switch to another scripting language?
 
 [build-dependencies]
@@ -38,6 +39,7 @@ rayon = "1.5.3"
 opt-level = 3 # "z"
 lto = true
 codegen-units = 1
+strip = true
 
 [profile.release.package."*"]
 opt-level = 3
